// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > Snapshots > should match snapshot for default textarea 1`] = `
<div
  class="w-full"
>
  <textarea
    class="block w-full rounded-md border border-gray-300 shadow-sm transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500 px-3 py-2 text-base resize-y"
    placeholder=""
    rows="3"
  />
</div>
`;

exports[`Textarea > Snapshots > should match snapshot for disabled state 1`] = `
<div
  class="w-full"
>
  <textarea
    class="block w-full rounded-md border border-gray-300 shadow-sm transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500 px-3 py-2 text-base resize-y"
    disabled=""
    placeholder=""
    rows="3"
  />
</div>
`;

exports[`Textarea > Snapshots > should match snapshot for readonly state 1`] = `
<div
  class="w-full"
>
  <textarea
    class="block w-full rounded-md border border-gray-300 shadow-sm transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500 px-3 py-2 text-base resize-y"
    placeholder=""
    readonly=""
    rows="3"
  />
</div>
`;

exports[`Textarea > Snapshots > should match snapshot with custom rows 1`] = `
<div
  class="w-full"
>
  <textarea
    class="block w-full rounded-md border border-gray-300 shadow-sm transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500 px-3 py-2 text-base resize-y"
    placeholder=""
    rows="10"
  />
</div>
`;

exports[`Textarea > Snapshots > should match snapshot with placeholder 1`] = `
<div
  class="w-full"
>
  <textarea
    class="block w-full rounded-md border border-gray-300 shadow-sm transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-[var(--tiger-primary,#2563eb)] disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500 px-3 py-2 text-base resize-y"
    placeholder="Enter description"
    rows="3"
  />
</div>
`;
